@@ -1,11 +1,12 @@
 File Name: CHANGES
 
-02/02/2021 FASP 2.6.1:
+02/05/2021 FASP 2.6.1:
 - Add uninstall target to the new CMakeFile.txt;
 - Now both old and new cmake work!
 - Change output of fasp_solver_amg();
 - Update header file;
-- Update return values for AMG solvers.
+- Update return values for AMG solvers;
+- Add Release/Debug targets into cmake.
 
 01/25/2021 FASP 2.6.0:
 - Switch cmake style.
